--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/index.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -18,8 +19,8 @@
 
 <body>
 
-    <div class="container">
-        <div class="header">
+    <div id="parent-container" class="container">
+        <div id="header-element" class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
                     <li role="presentation" class="active"><a href="{{ url_for('main') }}">Home</a>
@@ -32,23 +33,27 @@
             </nav>
             <h3 class="text-muted">Contour App</h3>
         </div>
- 
-        <p>
-            Create an account
-        </p>
-        <form action="/addUser" method="get">
-            <input type="text" placeholder="Username" name="username" value="{{
-              request.form.username }}">
-             <input type="password" placeholder="Password" name="password" value="{{
-              request.form.password }}">
-            <input class="btn btn-default" type="submit" value="Create Account">
-        </form>
+        <div id="login-section">
+            <p>
+                Create an account:
+            </p>
+            <form id="login-form" action="/addUser" method="get">
+                <input id="username-input" type="text" placeholder="Username" name="username" value="{{
+                  request.form.username }}">
+                  <br />
+                 <input id="password-input" type="password" placeholder="Password" name="password" value="{{
+                  request.form.password }}">
+                  <br />
+                <input class="btn btn-default" type="submit" value="Create Account">
+            </form>
 
-        <p>
-            or click start if you have one!
-        </p>
-
-        <button type="button" class="btn btn-info" onclick="window.location.href='{{ url_for('photos') }}'">Start!</button>
+            <p>
+            Or <a href="/photos">click here</a> to login if you already have an account with us.
+            </p>
+<!--             <button type="button" class="btn btn-info" onclick="window.location.href='{{ url_for('photos') }}'">Login!</button> -->
+        </div>
+        <div id="video-section">hello friends
+        </div>
     </div>
 </body>
 
